Adicao dos componentes Jogos e Audio, finalizacao de todas as interfaces e inicio da criacao dos formularios

--- a/src/app/componentes/anime/anime.component.html
+++ b/src/app/componentes/anime/anime.component.html
@@ -1,3 +1,13 @@
-<div style="background-color: yellowgreen;">
-    <p style="color: black;">teste</p>
-</div>
+<form >
+    <input type="text" [(ngModel)]="nome" nome="nome" >
+    <input type="text" [(ngModel)]="autor" autor="autor" >
+    <input type="text" [(ngModel)]="descricao" descricao="descricao" >
+    <input type="text" [(ngModel)]="disponibilidade" disponibilidade="disponibilidade" >
+    <input type="text" [(ngModel)]="estudio" estudio="estudio" >
+    <input type="text" [(ngModel)]="nacionalidade" nacionalidade="nacionalidade" >
+    <input type="text" [(ngModel)]="status" status="status" >
+    <input type="text" [(ngModel)]="statusVisto" statusVisto="statusVisto" >
+    <input type="number" [(ngModel)]="maxEps" maxEps="maxEps" >
+    <input type="number" [(ngModel)]="temps" temps="temps" >
+    <input type="date" [(ngModel)]="dtLancamento" dtLancamento="dtLancamento" >
+</form>
