--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<app-home></app-home>
+<header>
+</header>
+<nav>
+    <a routerLink="/">Home</a>
+    <a routerLink="/anime">Desenho</a>
+    <a routerLink="/filme">Filme</a>
+    <a routerLink="/livro">Livro</a>
+    <a routerLink="/manga">Manga</a>
+    <a routerLink="/novela">Novela</a>
+    <a routerLink="/serie">Series</a>
+</nav>
+<router-outlet></router-outlet>
+<main></main>
+<footer></footer>
