termino da criacao do formulario e inicio da estilizacao

--- a/src/app/componentes/audio/audio.component.html
+++ b/src/app/componentes/audio/audio.component.html
@@ -1,1 +1,15 @@
-<p>audio works!</p>
+<form >
+    <div class="form-group">
+        <input type="text" [(ngModel)]="Audio.nome" name="nome">
+        <input type="text" [(ngModel)]="Audio.autor" name="autor" >
+        <input type="text" [(ngModel)]="Audio.descricao" name="descricao">
+        <input type="text" [(ngModel)]="Audio.disponibilidade" name="disponibilidade">
+        <input type="text" [(ngModel)]="Audio.estudio" name="estudio">
+        <input type="text" [(ngModel)]="Audio.duracao" name="nacionalidade">
+        <input type="text" [(ngModel)]="Audio.statusVisto" name="statusVisto">
+        <input type="number" [(ngModel)]="Audio.tipo" name="maxEps">
+        <input type="date" [(ngModel)]="Audio.dtLancamento" name="dtLancamento">
+
+        <input type="submit" value="Enviar" (click)="enviaDados()">
+    </div>
+</form>
