Testes do metodo POST, e ajustes de css para os formularios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
 </header>
 <nav>
     <a routerLink="/">Home</a>
-    <a routerLink="/anime">Desenho</a>
+    <a routerLink="/desenho">Desenho</a>
     <a routerLink="/filme">Filme</a>
     <a routerLink="/livro">Livro</a>
-    <a routerLink="/manga">Manga</a>
+    <a routerLink="/quadrinhos">Quadrinhos</a>
     <a routerLink="/novela">Novela</a>
     <a routerLink="/serie">Series</a>
 </nav>
