--- a/src/app/componentes/desenho/desenho.component.html
+++ b/src/app/componentes/desenho/desenho.component.html
@@ -24,5 +24,6 @@
         <input type="date" [(ngModel)]="Desenho.dtLancamento" name="dtLancamento">
 
         <input type="submit" value="Enviar" (click)="enviaDados()">
+        <input type="submit" value="Deleta" (click)="deletaDados()">
     </div>
 </form>
