--- a/src/app/componentes/series/series.component.html
+++ b/src/app/componentes/series/series.component.html
@@ -1,17 +1,17 @@
 <form >
     <div class="form-group">
-        <input type="text" [(ngModel)]="Series.nome" name="nome">
-        <input type="text" [(ngModel)]="Series.autor" name="autor" >
-        <input type="text" [(ngModel)]="Series.descricao" name="descricao">
-        <input type="text" [(ngModel)]="Series.disponibilidade" name="disponibilidade">
-        <input type="text" [(ngModel)]="Series.estudio" name="estudio">
-        <input type="text" [(ngModel)]="Series.nacionalidade" name="nacionalidade">
-        <input type="text" [(ngModel)]="Series.statusVisto" name="statusVisto">
-        <input type="number" [(ngModel)]="Series.status" name="status">
-        <input type="number" [(ngModel)]="Series.maxEps" name="maxEps">
-        <input type="number" [(ngModel)]="Series.temps" name="temps">
-        <!-- <input type="date" [(ngModel)]="Series.dtLancamento" name="dtLancamento"> -->
+        <input type="text" [(ngModel)]="Serie.nome" name="nome">
+        <input type="text" [(ngModel)]="Serie.autor" name="autor" >
+        <input type="text" [(ngModel)]="Serie.descricao" name="descricao">
+        <input type="text" [(ngModel)]="Serie.disponibilidade" name="disponibilidade">
+        <input type="text" [(ngModel)]="Serie.estudio" name="estudio">
+        <input type="text" [(ngModel)]="Serie.nacionalidade" name="nacionalidade">
+        <input type="text" [(ngModel)]="Serie.statusVisto" name="statusVisto">
+        <input type="number" [(ngModel)]="Serie.status" name="status">
+        <input type="number" [(ngModel)]="Serie.maxEps" name="maxEps">
+        <input type="number" [(ngModel)]="Serie.temps" name="temps">
+        <!-- <input type="date" [(ngModel)]="Serie.dtLancamento" name="dtLancamento"> -->
 
-        <input type="submit" value="Enviar" (click)="sendDados()">
+        <input type="submit" value="Enviar" (click)="enviaDados()">
     </div>
 </form>
