--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,85 @@
     margin: 0;
     padding: 0;
     font: 1em sans-serif;
+    height: 100%;
+    position: relative;
 }
+
+body{
+    margin: 0 0 100px;
+    padding: 25px
+}
+
+header{
+    display: flex;
+}
+
+h1{
+    font-size: 4em;
+    justify-content: center;
+    margin: auto;
+}
+
 .fundo{
     background-color: #FF934F;
+    height: auto;
+    width: auto;
+}
+
+img{
+    width: auto;
+    height: auto;
+    margin: auto;
+    padding-top: 3vw;
+    display: block;
+}
+
+nav{
+    display: flex;
+    background-color: #eaebec;
+    border-radius: 100px;
+    justify-content: center;
+    margin: 1%;
+}
+
+nav > button{
+    margin: 8px;
+    border-radius: 50%;
+    padding: 5px;
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    background-color: #eaebec;
+    margin: 1%;
+    border-radius: 100px;
+}
+
+h2{
+    font-size: 1em;
+    margin: auto;
+}
+
+/* footer{
+    background-color: aqua;
+} */
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    margin: 0 0 100px;
+    /* bottom = footer height */
+    padding: 25px;
+}
+footer {
+    background-color: orange;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    overflow:hidden;
 }
