--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="fundo">
+<body class="fundo">
     <header>
         <button routerLink="/">Home</button>
         <h1> {{ title }} </h1>
@@ -45,7 +45,7 @@
             <p>{{serie.nome}} - {{serie.autor}}</p>
         </div>
     </main>
-</div>
+</body>
 
 <footer class="creditos">
     <p>{{ creditos }}</p>
