--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,28 +3,26 @@
     padding: 0;
     font: 1em sans-serif;
     height: 100%;
-    position: relative;
-}
-
-body{
-    padding: 5%;
-    background-color: #FF934F;
 }
 
 header {
     display: flex;
+    padding-left: 2%;
+    padding-top: 2%;
+    background-color: #FF934F;
 }
 
 header > button{
-    border-radius: 100%;
     width: 5%;
-    height: auto;
+    height: 5%;
     padding: 16px;
-    padding-left: 10px;
-    position: relative;
-    align-self: center;
-    font-size: 0.87em;
-    text-align: left;
+    background-color: #6a4ee6;
+}
+
+body{
+    padding: 2%;    
+    background-color: #FF934F;
+    min-height: 80vh;
 }
 
 h1{
@@ -38,29 +36,25 @@ img{
     display: block;
 }
 
-nav{
-    position:relative;
+.rotas{
+    margin: 1%;
     top: -12px;
+    min-height: 10vh;
+    position: relative;
     display: flex;
-    background-color: #eaebec;
+    background-color: #6a4ee6;
     border-radius: 100px;
-    justify-content: center;
-    margin: 1%;
+    justify-content: space-around;
 }
 
-nav > button{
-    margin: 8px;
+.rotas > button{
+    margin: auto;
+    min-height: 8%;
+    min-width: 8%;
     border-radius: 50%;
-    padding: 5px;
+    background-color: white;
 }
 
-main{
-    display: flex;
-    justify-content: center;
-    background-color: #eaebec;
-    margin: 1%;
-    border-radius: 100px;
-}
 
 h2{
     font-size: 1em;
@@ -68,9 +62,14 @@ h2{
 }
 
 footer {
-    background-color: #da7557;
-    position: relative;
     bottom: 0;
     height: 10%;
     width: 100%;
+    background-color: #da7557;
+    display: flex;
+    position: relative;
+}
+
+footer > p {
+    margin: auto;
 }
