--- a/src/app/componentes/desenho/desenho.component.html
+++ b/src/app/componentes/desenho/desenho.component.html
@@ -1,50 +1,98 @@
-<mat-card>
-        <mat-card-content>{{ Desenho.nome }}</mat-card-content>
-</mat-card>
-<!-- <div *ngFor=" let desenho of Desenhos " class="tabela">
+<button mat-raised-button (click)="adicionar()" class="adicionar"> Adicionar </button>
+
+<div *ngFor=" let desenho of Desenhos">
+        <div class="botoes">
+                <button mat-raised-button (click)="deletaDados( desenho.id )" color="warn"> Apagar </button>
+                <button mat-raised-button (click)="editaDados( desenho )" color="primary"> Editar </button>
+        </div>
         
-        <mat-card-header>
-                <mat-card-title>Descricao</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>{{ desenho.descricao }}</mat-card-content>
-        <mat-card-header>
-                <mat-card-title>Autor</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>{{ desenho.autor }}</mat-card-content>
-        <mat-card-header>
-                <mat-card-title>Numero de episodios</mat-card-title>        
-        </mat-card-header>
-        <mat-card-content>{{ desenho.maxEps }}</mat-card-content>
-        <mat-card-header>
-                <mat-card-title>Disponibilidade</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>{{ desenho.disponibilidade }}</mat-card-content>
-        <mat-card-header>
-                <mat-card-title>Estudio</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>{{ desenho.estudio }}</mat-card-content>
-        <mat-card-header>
-                <mat-card-title>Nacionalidade</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>{{ desenho.nacionalidade }}</mat-card-content>
-        <mat-card-header>
-                <mat-card-title>Status</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>{{ desenho.status }}</mat-card-content>
-        <mat-card-header>
-                <mat-card-title>Visto</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>{{ desenho.statusVisto }}</mat-card-content>
-        <mat-card-header>
-                <mat-card-title>Numero de temporadas</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>{{ desenho.temps }}</mat-card-content>
-        <mat-card-header>
-                <mat-card-title>Lancamento</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>{{ desenho.dtLancamento }}</mat-card-content>
-        
-        <button (click)="deletaDados( desenho.id )"> Apagar </button>
-	<button (click)="editaDados( desenho )"> Editar </button>
-</div> -->
-<button (click)="adicionar()"> Adicionar </button>
+        <div class="lista">
+                <mat-card class="imagem">
+                        <mat-card-content>
+                                <img src="../../../assets/gato1.jpg" alt="Midas" sizes="300px">
+                        </mat-card-content>
+                </mat-card>
+                <div class="item">
+                        <mat-card>
+                                <mat-card-header>
+                                        <mat-card-title>Nome</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ Desenho.nome }}</mat-card-content>
+                        </mat-card>
+
+                        <mat-card>
+                                <mat-card-header>
+                                        <mat-card-title>Descricao</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.descricao }}</mat-card-content>
+                        </mat-card>
+
+                        <mat-card>    
+                                <mat-card-header>
+                                        <mat-card-title>Autor</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.autor }}</mat-card-content>
+                        </mat-card>
+                        
+
+                        <mat-card>
+                                <mat-card-header>
+                                        <mat-card-title>Numero de episodios</mat-card-title>        
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.maxEps }}</mat-card-content>
+                        </mat-card>
+
+                        <mat-card>
+                                <mat-card-header>
+                                        <mat-card-title>Disponibilidade</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.disponibilidade }}</mat-card-content>
+                        </mat-card>
+                        
+
+                        <mat-card>        
+                                <mat-card-header>
+                                        <mat-card-title>Estudio</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.estudio }}</mat-card-content>
+                        </mat-card>
+
+                        <mat-card>                
+                                <mat-card-header>
+                                        <mat-card-title>Nacionalidade</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.nacionalidade }}</mat-card-content>
+                        </mat-card>
+
+                        <mat-card>
+                                <mat-card-header>
+                                        <mat-card-title>Status</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.status }}</mat-card-content>        
+                        </mat-card>
+
+                        <mat-card>
+                                <mat-card-header>
+                                        <mat-card-title>Visto</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.statusVisto }}</mat-card-content>
+                        
+                        </mat-card>
+                        
+                        <mat-card>
+                                <mat-card-header>
+                                        <mat-card-title>Numero de temporadas</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.temps }}</mat-card-content>
+                        </mat-card>
+                        
+
+                        <mat-card>
+                                <mat-card-header>
+                                        <mat-card-title>Lancamento</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>{{ desenho.dtLancamento }}</mat-card-content>
+                        </mat-card>
+                </div>        
+        </div>
+</div>
