Finalizacao da tela de listagem

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-    <button mat-fab routerLink="/">Home</button>
+    <button mat-fab routerLink="/" class="Home">Home</button>
     <h1> {{ title }} </h1>
 </header>
 <body >
