--- a/src/app/popups/form-desenho/form-desenho.component.html
+++ b/src/app/popups/form-desenho/form-desenho.component.html
@@ -1,4 +1,4 @@
-<button (click)="fechar()">X</button>
+<button mat-raised-button (click)="fechar()">X</button>
 
 <form >
     <div class="form-group">
